k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service-deployment
spec:
  replicas: 2 # Run 2 instances of our application for high availability
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
      - name: backend-service-container
        # This is the image Jenkins pushes to Docker Hub. Jenkins will update the tag.
        image: ayoubdev29/backend-service:latest
        ports:
        - containerPort: 8080
        # Health checks for Kubernetes to know if our app is healthy
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
